Correction des layout

--- a/app/src/main/res/layout/activity_no_connection_internet.xml
+++ b/app/src/main/res/layout/activity_no_connection_internet.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="140dp"
             android:layout_marginEnd="0dp"
             android:contentDescription="@string/no_internet_connection"
             app:srcCompat="@drawable/no_internet" />
@@ -103,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="-6dp"
             android:layout_marginEnd="0dp"
             android:fontFamily="sans-serif-medium"
             android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
@@ -118,6 +118,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:baselineAligned="false"
         android:orientation="vertical"
         android:textAlignment="textStart"
