--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -58,7 +58,7 @@
             style="@android:style/Widget.Holo.TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="-6dp"
             android:layout_marginEnd="0dp"
             android:fontFamily="sans-serif-medium"
             android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
@@ -83,7 +83,7 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="140dp"
             android:contentDescription="@string/error_img"
             app:srcCompat="@drawable/error"
             tools:ignore="ImageContrastCheck" />
@@ -117,6 +117,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:baselineAligned="false"
         android:orientation="vertical"
         android:textAlignment="textStart"
