--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,11 @@
                 android:textSize="24sp"
                 tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
         </LinearLayout>
-
         <TextView
             android:id="@+id/BoaviztaSousTextHeader"
             style="@android:style/Widget.Holo.TextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="0dp"
             android:layout_marginTop="-6dp"
             android:layout_marginEnd="0dp"
@@ -67,7 +66,6 @@
             android:textColor="#00838F"
             android:textSize="12sp"
             tools:ignore="TextSizeCheck" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -95,20 +93,17 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="551dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.589"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.876"
         tools:ignore="TextSizeCheck">
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="14dp"
-            android:layout_column="4"
             android:stretchColumns="0,2"
             tools:ignore="ObsoleteLayoutParam">
 
@@ -134,7 +129,6 @@
                     android:layout_marginStart="14dp"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/quantite"
-                    android:layout_span="1"
                     android:textAlignment="viewStart"
                     android:textStyle="bold" />
 
@@ -143,7 +137,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
-                    android:layout_span="1"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/nb_coeurs"
                     android:textAlignment="center"
@@ -154,7 +147,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_span="2"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/architecture"
                     android:textAlignment="center"
